--- a/for_loop.ipynb
+++ b/for_loop.ipynb
@@ -639,6 +639,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LAMBDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[57.0, 58.2, 50.6, 27.2]\n",
+      "Your solution should not include the `mean` function. `mean` should be replaced by a lambda function.\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [\n",
+    "              [34, 63, 88, 71, 29],\n",
+    "              [90, 78, 51, 27, 45],\n",
+    "              [63, 37, 85, 46, 22],\n",
+    "              [51, 22, 34, 11, 18]\n",
+    "           ]\n",
+    "averages = list(map(lambda x: sum(x) / len(x), numbers))\n",
+    "print(averages)\n",
+    "\n",
+    "### Notebook grading\n",
+    "correct_answer = [57.0, 58.2, 50.6, 27.2]\n",
+    "if 'mean' in locals():\n",
+    "    print(\"Your solution should not include the `mean` function. `mean` should be replaced by a lambda function.\")\n",
+    "elif averages == correct_answer:\n",
+    "    print(\"Nice work! You can view my solution on the next page.\")\n",
+    "elif type(averages) != list:\n",
+    "    print(\"Not quite! Did you convert the output of `map` to a list?\")\n",
+    "else:\n",
+    "    print(\"Not quite! The value of `averages` should be {}\".format(correct_answer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Chicago', 'Denver', 'Boston']\n",
+      "Your solution should not include the `is_short` function. `is_short` should be replaced by a lambda function.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities = [\"New York City\", \"Los Angeles\", \"Chicago\", \"Mountain View\", \"Denver\", \"Boston\"]\n",
+    "\n",
+    "\n",
+    "short_cities = list(filter(lambda name: len(name) < 10, cities))\n",
+    "print(short_cities)\n",
+    "\n",
+    "### Notebook grading\n",
+    "correct_answer = ['Chicago', 'Denver', 'Boston']\n",
+    "if 'is_short' in locals():\n",
+    "    print(\"Your solution should not include the `is_short` function. `is_short` should be replaced by a lambda function.\")\n",
+    "elif short_cities == correct_answer:\n",
+    "    print(\"Nice work! You can view my solution on the next page.\")\n",
+    "elif type(short_cities) != list:\n",
+    "    print(\"Not quite! Did you convert the output of `filter` to a list?\")\n",
+    "else:\n",
+    "    print(\"Not quite! The value of `short_cities` should be {}\".format(correct_answer))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
