--- a/control_flow.ipynb
+++ b/control_flow.ipynb
@@ -145,6 +145,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(50):\n",
+    "    if i % 5 == 0 and i <=30 and i != 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
