--- a/mini_projects/numpy_mini_project.ipynb
+++ b/mini_projects/numpy_mini_project.ipynb
@@ -17,17 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "# import NumPy into Python\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "# Create a 1000 x 20 ndarray with random integers in the half-open interval [0, 5001).\n",
-    "X = \n",
+    "X = np.random.randint(0,5001,size=(1000, 20))\n",
     "\n",
-    "# print the shape of X\n"
+    "# print the shape of X\n",
+    "print(X.shape)"
    ]
   },
   {
@@ -43,15 +52,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2511.826 2474.886 2439.161 2534.62  2574.357 2499.303 2508.15  2493.781\n",
+      " 2513.783 2506.665 2507.487 2496.604 2591.309 2484.369 2387.157 2460.206\n",
+      " 2517.318 2446.554 2461.356 2393.223]\n",
+      "[1449.05213147 1461.68740058 1431.62631754 1420.1480358  1445.31018524\n",
+      " 1440.37821949 1480.50628688 1447.46559995 1460.4063085  1437.41611052\n",
+      " 1467.85451726 1469.71949609 1474.6938128  1489.52420821 1442.86704736\n",
+      " 1448.07395721 1435.35509435 1413.20976542 1481.38104324 1447.04499283]\n"
+     ]
+    }
+   ],
    "source": [
     "# Average of the values in each column of X\n",
-    "ave_cols =\n",
+    "ave_cols =np.mean(X, axis=0)\n",
+    "print(ave_cols)\n",
     "\n",
     "# Standard Deviation of the values in each column of X\n",
-    "std_cols ="
+    "std_cols = np.std(X, axis=0)\n",
+    "print(std_cols)"
    ]
   },
   {
@@ -63,14 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20,)\n",
+      "(20,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape of ave_cols\n",
+    "print(ave_cols.shape)\n",
     "\n",
-    "\n",
-    "# Print the shape of std_cols\n"
+    "# Print the shape of std_cols\n",
+    "print(std_cols.shape)"
    ]
   },
   {
@@ -82,12 +117,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.58253382 -0.45008666 -1.26510737 ...  0.80203663  0.25020166\n",
+      "  -0.3754016 ]\n",
+      " [-1.11440159 -0.12785634 -0.03224375 ... -0.4766129   1.51456238\n",
+      "  -1.60687678]\n",
+      " [-0.60786357 -1.64049167 -0.61689352 ...  1.25915207  0.42841374\n",
+      "  -1.36569561]\n",
+      " ...\n",
+      " [-0.67618409  1.53939481 -1.04368087 ... -1.57765256 -1.21532269\n",
+      "  -0.64215211]\n",
+      " [-0.15308352 -0.57254786 -1.44741751 ... -0.80777393 -1.11271574\n",
+      "   0.2327343 ]\n",
+      " [-1.17099031 -1.671278   -0.94519148 ...  0.92091495  1.28369673\n",
+      "  -1.32976031]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Mean normalize X\n",
-    "X_norm ="
+    "X_norm = (X - ave_cols) / std_cols\n",
+    "print(X_norm)"
    ]
   },
   {
@@ -99,17 +155,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.1316282072803006e-17\n",
+      "-1.7130034358230357\n",
+      "1.724984207570796\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the average of all the values of X_norm\n",
-    "\n",
+    "print(np.mean(X_norm))\n",
     "\n",
     "# Print the average of the minimum value in each column of X_norm\n",
+    "print(np.mean(np.min(X_norm, axis=0)))\n",
     "\n",
-    "\n",
-    "# Print the average of the maximum value in each column of X_norm\n"
+    "# Print the average of the maximum value in each column of X_norm\n",
+    "print(np.mean(np.max(X_norm, axis=0)))"
    ]
   },
   {
@@ -135,9 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4, 0, 3], dtype=int32)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We create a random permutation of integers 0 to 4\n",
     "np.random.permutation(5)"
@@ -154,12 +232,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a rank 1 ndarray that contains a random permutation of the row indices of `X_norm`\n",
-    "row_indices ="
+    "row_indices = np.random.permutation(X_norm.shape[0])\n",
+    "print(row_indices.shape)"
    ]
   },
   {
@@ -171,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,13 +267,13 @@
     "\n",
     "\n",
     "# Create a Training Set\n",
-    "X_train =\n",
+    "X_train = X_norm[row_indices[:600]]\n",
     "\n",
     "# Create a Cross Validation Set\n",
-    "X_crossVal =\n",
+    "X_crossVal = X_norm[row_indices[600:800]]\n",
     "\n",
     "# Create a Test Set\n",
-    "X_test ="
+    "X_test = X_norm[row_indices[800:]]"
    ]
   },
   {
@@ -198,17 +285,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(600, 20)\n",
+      "(200, 20)\n",
+      "(200, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape of X_train\n",
-    "\n",
+    "print(X_train.shape)\n",
     "\n",
     "# Print the shape of X_crossVal\n",
+    "print(X_crossVal.shape)\n",
     "\n",
-    "\n",
-    "# Print the shape of X_test\n"
+    "# Print the shape of X_test\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the version of NumPy\n",
+    "print(np.__version__)"
    ]
   },
   {
@@ -221,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -235,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
