--- a/exercises/pandas.ipynb
+++ b/exercises/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,76 @@
     "# The distance from the Sun is in units of 10^6 km\n",
     "distance_from_sun = [149.6, 1433.5, 108.2, 227.9, 778.6]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TO DO: Create a Pandas Series \"dist_planets\" using the lists above, representing the distance of the planet from the Sun.\n",
+    "# Use the `distance_from_sun` as your data, and `planets` as your index.\n",
+    "dist_planets = pd.Series(data=distance_from_sun, index=planets)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TO DO: Calculate the time (minutes) it takes light from the Sun to reach each planet. \n",
+    "# You can do this by dividing each planet's distance from the Sun by the speed of light.\n",
+    "# Use the speed of light, c = 18, since light travels 18 x 10^6 km/minute.\n",
+    "time_light = dist_planets / 18\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice work!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TO DO: Use Boolean indexing to select only those planets for which sunlight takes less\n",
+    "# than 40 minutes to reach them.\n",
+    "close_planets = time_light[time_light < 40]\n",
+    "\n",
+    "### Notebook grading\n",
+    "import math\n",
+    "distance_from_sun1 = [149.6, 1433.5, 108.2, 227.9, 778.6]\n",
+    "planets1 = ['Earth','Saturn', 'Venus', 'Mars', 'Jupiter']\n",
+    "dist_planets1 = pd.Series(data = distance_from_sun, index = planets)\n",
+    "time_light1 = dist_planets1 / 18\n",
+    "close_planets1 = time_light1[time_light1 < 40]\n",
+    "\n",
+    "if not dist_planets1.equals(dist_planets):\n",
+    "    print(\"dist_planets is incorrect\")\n",
+    "elif  not time_light1.equals(time_light):\n",
+    "    print(\"time_light is incorrect. Verify that it is created by dividing dist_planets by 18.\")\n",
+    "elif not close_planets1.equals(close_planets):\n",
+    "    print(\"close_planets is incorrect. Verify that `close_planets` is created by using `time_light < 40` as a boolean index in `time_light`\")\n",
+    "else:\n",
+    "    print(\"Nice work!\")\n",
+    "\n",
+    "                  \n",
+    "                  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -26,7 +96,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.8"
   }
  },
