pushing the final project

--- a/bikeshare_project/debug_bikeshare.ipynb
+++ b/bikeshare_project/debug_bikeshare.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from datetime import timedelta\n",
-    "import datetime as dt"
+    "import numpy as np"
    ]
   },
   {
@@ -145,29 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! Let's explore some US bikeshare data!\n",
-      "----------------------------------------\n",
-      "Your chosen City, Month(s) and Day(s) are:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('chicago', 'january', 'monday')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CITY_DATA = { 'chicago': 'chicago.csv',\n",
     "              'new york city': 'new_york_city.csv',\n",
@@ -208,15 +186,141 @@
     "            print('Invalid input. Please enter a valid day of the week.')\n",
     "\n",
     "    print('-'*40)\n",
+    "    \n",
     "    print(\"Your chosen City, Month(s) and Day(s) are:\")\n",
     "    return city, month, day\n",
     "\n",
-    "get_filters()"
+    "# get_filters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(city, month, day):\n",
+    "    \"\"\"\n",
+    "    Loads data for the specified city and filters by month and day if applicable.\n",
+    "\n",
+    "    Args:\n",
+    "        (str) city - name of the city to analyze\n",
+    "        (str) month - name of the month to filter by, or \"all\" to apply no month filter\n",
+    "        (str) day - name of the day of week to filter by, or \"all\" to apply no day filter\n",
+    "    Returns:\n",
+    "        df - Pandas DataFrame containing city data filtered by month and day\n",
+    "    \"\"\"\n",
+    "    df = pd.read_csv(CITY_DATA[city])\n",
+    "    df.drop('Unnamed: 0', axis=1, inplace=True)\n",
+    "    df['Start Time'] = pd.to_datetime(df['Start Time'])\n",
+    "    df['month'] = df['Start Time'].dt.month\n",
+    "    df['day_of_week'] = df['Start Time'].dt.day_name()\n",
+    "    if month != 'all':\n",
+    "        months = ['january', 'february', 'march', 'april', 'may', 'june']\n",
+    "        month = months.index(month) + 1\n",
+    "        df = df[df['month'] == month]\n",
+    "    if day != 'all':\n",
+    "        df = df[df['day_of_week'] == day.title()]\n",
+    "\n",
+    "    print(f\"Dataframe for {city.title()}, {month}rd month, and {day.title()}.\")\n",
+    "    return df\n",
+    "\n",
+    "# df = load_data('chicago', 'march', 'friday')\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def time_stats(df):\n",
+    "    \"\"\"Displays statistics on the most frequent times of travel.\"\"\"\n",
+    "\n",
+    "    print('\\nCalculating The Most Frequent Times of Travel...\\n')\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    # display the most common month\n",
+    "    common_month = df['month'].mode()[0]\n",
+    "\n",
+    "    # display the most common day of week\n",
+    "    common_day = df['day_of_week'].mode()[0]\n",
+    "\n",
+    "    # display the most common start hour\n",
+    "    df['hour'] = df['Start Time'].dt.hour\n",
+    "    common_hour = df['hour'].mode()[0]\n",
+    "\n",
+    "    print(\"\\nThis took %s seconds.\" % (time.time() - start_time))\n",
+    "    print('-'*40)\n",
+    "\n",
+    "    # print(common_month, common_day, df['hour'])\n",
+    "\n",
+    "    return common_month.item(), common_day, common_hour.item()\n",
+    "\n",
+    "# time_stats(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def station_stats(df):\n",
+    "    \"\"\"Displays statistics on the most popular stations and trip.\"\"\"\n",
+    "\n",
+    "    print('\\nCalculating The Most Popular Stations and Trip...\\n')\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    # display most commonly used start station\n",
+    "    most_common_start_station = df['Start Station'].mode()[0]\n",
+    "\n",
+    "    # display most commonly used end station\n",
+    "    most_common_end_station = df['End Station'].mode()[0]\n",
+    "\n",
+    "    # display most frequent combination of start station and end station trip\n",
+    "    df['Start End Station'] = df['Start Station'] + ' to ' + df['End Station']\n",
+    "    most_common_combination = df['Start End Station'].mode()[0]\n",
+    "\n",
+    "    print(\"\\nThis took %s seconds.\" % (time.time() - start_time))\n",
+    "    print('-'*40)\n",
+    "    \n",
+    "    return most_common_start_station, most_common_end_station, most_common_combination\n",
+    "\n",
+    "# station_stats(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trip_duration_stats(df):\n",
+    "    \"\"\"Displays statistics on the total and average trip duration.\"\"\"\n",
+    "\n",
+    "    print('\\nCalculating Trip Duration...\\n')\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    # display total travel time\n",
+    "    total_travel_time = df['Trip Duration'].sum()\n",
+    "\n",
+    "    # display mean travel time\n",
+    "    mean_travel_time = df['Trip Duration'].mean()\n",
+    "\n",
+    "    print(\"\\nThis took %s seconds.\" % (time.time() - start_time))\n",
+    "    print('-'*40)\n",
+    "\n",
+    "    return total_travel_time.item(), mean_travel_time.item()\n",
+    "\n",
+    "# trip_duration_stats(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +354,8 @@
        "      <th>Birth Year</th>\n",
        "      <th>month</th>\n",
        "      <th>day_of_week</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Start End Station</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -265,6 +371,8 @@
        "      <td>1989.0</td>\n",
        "      <td>3</td>\n",
        "      <td>Friday</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Dearborn St &amp; Erie St to State St &amp; Van Buren St</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>93</th>\n",
@@ -278,6 +386,8 @@
        "      <td>1964.0</td>\n",
        "      <td>3</td>\n",
        "      <td>Friday</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Sedgwick St &amp; Webster Ave to Western Ave &amp; Win...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>175</th>\n",
@@ -291,6 +401,8 @@
        "      <td>1987.0</td>\n",
        "      <td>3</td>\n",
        "      <td>Friday</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Franklin St &amp; Monroe St to Aberdeen St &amp; Monro...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>190</th>\n",
@@ -304,6 +416,8 @@
        "      <td>1984.0</td>\n",
        "      <td>3</td>\n",
        "      <td>Friday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Southport Ave &amp; Wellington Ave to Lake Shore D...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
@@ -317,6 +431,8 @@
        "      <td>1983.0</td>\n",
        "      <td>3</td>\n",
        "      <td>Friday</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Clinton St &amp; Jackson Blvd to Racine Ave (May S...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -337,166 +453,36 @@
        "190  Southport Ave & Wellington Ave       Lake Shore Dr & North Blvd   \n",
        "198       Clinton St & Jackson Blvd  Racine Ave (May St) & Fulton St   \n",
        "\n",
-       "      User Type  Gender  Birth Year  month day_of_week  \n",
-       "37   Subscriber    Male      1989.0      3      Friday  \n",
-       "93   Subscriber  Female      1964.0      3      Friday  \n",
-       "175  Subscriber    Male      1987.0      3      Friday  \n",
-       "190  Subscriber  Female      1984.0      3      Friday  \n",
-       "198  Subscriber    Male      1983.0      3      Friday  "
+       "      User Type  Gender  Birth Year  month day_of_week  hour  \\\n",
+       "37   Subscriber    Male      1989.0      3      Friday    15   \n",
+       "93   Subscriber  Female      1964.0      3      Friday    15   \n",
+       "175  Subscriber    Male      1987.0      3      Friday    15   \n",
+       "190  Subscriber  Female      1984.0      3      Friday    12   \n",
+       "198  Subscriber    Male      1983.0      3      Friday     8   \n",
+       "\n",
+       "                                     Start End Station  \n",
+       "37    Dearborn St & Erie St to State St & Van Buren St  \n",
+       "93   Sedgwick St & Webster Ave to Western Ave & Win...  \n",
+       "175  Franklin St & Monroe St to Aberdeen St & Monro...  \n",
+       "190  Southport Ave & Wellington Ave to Lake Shore D...  \n",
+       "198  Clinton St & Jackson Blvd to Racine Ave (May S...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "def load_data(city, month, day):\n",
-    "    \"\"\"\n",
-    "    Loads data for the specified city and filters by month and day if applicable.\n",
-    "\n",
-    "    Args:\n",
-    "        (str) city - name of the city to analyze\n",
-    "        (str) month - name of the month to filter by, or \"all\" to apply no month filter\n",
-    "        (str) day - name of the day of week to filter by, or \"all\" to apply no day filter\n",
-    "    Returns:\n",
-    "        df - Pandas DataFrame containing city data filtered by month and day\n",
-    "    \"\"\"\n",
-    "    df = pd.read_csv(CITY_DATA[city])\n",
-    "    df.drop('Unnamed: 0', axis=1, inplace=True)\n",
-    "    df['Start Time'] = pd.to_datetime(df['Start Time'])\n",
-    "    df['month'] = df['Start Time'].dt.month\n",
-    "    df['day_of_week'] = df['Start Time'].dt.day_name()\n",
-    "    if month != 'all':\n",
-    "        months = ['january', 'february', 'march', 'april', 'may', 'june']\n",
-    "        month = months.index(month) + 1\n",
-    "        df = df[df['month'] == month]\n",
-    "    if day != 'all':\n",
-    "        df = df[df['day_of_week'] == day.title()]\n",
-    "\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "df = load_data('chicago', 'march', 'friday')\n",
-    "df.head()"
+    "# df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Calculating The Most Frequent Times of Travel...\n",
-      "\n",
-      "\n",
-      "This took 0.001214742660522461 seconds.\n",
-      "----------------------------------------\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(3, 'Friday', 17)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "def time_stats(df):\n",
-    "    \"\"\"Displays statistics on the most frequent times of travel.\"\"\"\n",
-    "\n",
-    "    print('\\nCalculating The Most Frequent Times of Travel...\\n')\n",
-    "    start_time = time.time()\n",
-    "\n",
-    "    # display the most common month\n",
-    "    common_month = df['month'].mode()[0]\n",
-    "\n",
-    "    # display the most common day of week\n",
-    "    common_day = df['day_of_week'].mode()[0]\n",
-    "\n",
-    "    # display the most common start hour\n",
-    "    df['hour'] = df['Start Time'].dt.hour\n",
-    "    common_hour = df['hour'].mode()[0]\n",
-    "\n",
-    "    print(\"\\nThis took %s seconds.\" % (time.time() - start_time))\n",
-    "    print('-'*40)\n",
-    "\n",
-    "    # print(common_month, common_day, df['hour'])\n",
-    "\n",
-    "    return common_month.item(), common_day, common_hour.item()\n",
-    "\n",
-    "time_stats(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def station_stats(df):\n",
-    "    \"\"\"Displays statistics on the most popular stations and trip.\"\"\"\n",
-    "\n",
-    "    print('\\nCalculating The Most Popular Stations and Trip...\\n')\n",
-    "    start_time = time.time()\n",
-    "\n",
-    "    # display most commonly used start station\n",
-    "\n",
-    "\n",
-    "    # display most commonly used end station\n",
-    "\n",
-    "\n",
-    "    # display most frequent combination of start station and end station trip\n",
-    "\n",
-    "\n",
-    "    print(\"\\nThis took %s seconds.\" % (time.time() - start_time))\n",
-    "    print('-'*40)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def trip_duration_stats(df):\n",
-    "    \"\"\"Displays statistics on the total and average trip duration.\"\"\"\n",
-    "\n",
-    "    print('\\nCalculating Trip Duration...\\n')\n",
-    "    start_time = time.time()\n",
-    "\n",
-    "    # display total travel time\n",
-    "\n",
-    "\n",
-    "    # display mean travel time\n",
-    "\n",
-    "\n",
-    "    print(\"\\nThis took %s seconds.\" % (time.time() - start_time))\n",
-    "    print('-'*40)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "def user_stats(df):\n",
     "    \"\"\"Displays statistics on bikeshare users.\"\"\"\n",
     "\n",
@@ -504,24 +490,73 @@
     "    start_time = time.time()\n",
     "\n",
     "    # Display counts of user types\n",
-    "\n",
+    "    user_types = df['User Type'].value_counts()\n",
     "\n",
     "    # Display counts of gender\n",
-    "\n",
+    "    gender = df['Gender'].value_counts()\n",
+    "    # female = df[df['Gender']==\"Female\"].shape[0]\n",
+    "    # male = df[df['Gender']==\"Male\"].shape[0]\n",
     "\n",
     "    # Display earliest, most recent, and most common year of birth\n",
+    "    earliest_birth_year = df['Birth Year'].min()\n",
+    "    most_recent_birth_year = df['Birth Year'].max()\n",
+    "    most_common_birth_year = df['Birth Year'].mode()[0]\n",
     "\n",
-    "\n",
+    "    # print(user_types, \"\\n\")\n",
+    "    # print(gender, \"\\n\")\n",
+    "    # print(\"Gender Count: \", gender, \"\\n\", \" female count: \", female, \"\\n\", \" male count: \", male)\n",
+    "    # print(\"Earliest Birth Year: \", earliest_birth_year, \"\\n\", \"Most Recent Birth Year: \", most_recent_birth_year, \"\\n\", \"Most Common Birth Year: \", most_common_birth_year)\n",
+    "    \n",
     "    print(\"\\nThis took %s seconds.\" % (time.time() - start_time))\n",
     "    print('-'*40)\n",
-    "\n"
+    "    \n",
+    "    return user_types, gender, earliest_birth_year, most_recent_birth_year, most_common_birth_year\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# user_stats(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Let's explore some US bikeshare data!\n",
+      "----------------------------------------\n",
+      "Your chosen City, Month(s) and Day(s) are:\n",
+      "Dataframe for Chicago, 1rd month, and Monday.\n",
+      "\n",
+      "Calculating The Most Frequent Times of Travel...\n",
+      "\n",
+      "\n",
+      "This took 0.0009007453918457031 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating The Most Popular Stations and Trip...\n",
+      "\n",
+      "\n",
+      "This took 0.0010209083557128906 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating Trip Duration...\n",
+      "\n",
+      "\n",
+      "This took 0.0009558200836181641 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating User Stats...\n",
+      "\n",
+      "\n",
+      "This took 0.0005030632019042969 seconds.\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def main():\n",
@@ -542,6 +577,13 @@
     "if __name__ == \"__main__\":\n",
     "\tmain()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -560,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
