adding a trial code for when the user wants to display list of 5 rows at a time

--- a/bikeshare_project/debug_bikeshare.ipynb
+++ b/bikeshare_project/debug_bikeshare.ipynb
@@ -256,6 +256,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "trial for asking user if they want to display 5 rowsat a time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -666,61 +673,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "CITY_DATA = { 'chicago': 'chicago.csv',\n",
-    "              'new york city': 'new_york_city.csv',\n",
-    "              'washington': 'washington.csv' }\n",
-    "\n",
-    "def get_filters():\n",
-    "    \"\"\"\n",
-    "    Asks user to specify a city, month, and day to analyze and provides an option to display data.\n",
-    "\n",
-    "    Returns:\n",
-    "        (str) city - name of the city to analyze\n",
-    "        (str) month - name of the month to filter by, or \"all\" to apply no month filter\n",
-    "        (str) day - name of the day of week to filter by, or \"all\" to apply no day filter\n",
-    "    \"\"\"\n",
-    "    print(\"Hello! Let's explore some US bikeshare data!\")\n",
-    "\n",
-    "    # Get user input for city\n",
-    "    while True:\n",
-    "        try:\n",
-    "            city = input(\"Would you like to see data for Chicago, New York City, or Washington? \").strip().lower()\n",
-    "            if city in CITY_DATA:\n",
-    "                break\n",
-    "            else:\n",
-    "                print(\"❌ Invalid input. Please enter a valid city name (Chicago, New York City, Washington).\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠️ Error: {e}. Please try again.\")\n",
-    "\n",
-    "    # Get user input for month\n",
-    "    while True:\n",
-    "        try:\n",
-    "            month = input(\"Which month - January, February, March, April, May, or June? (Type 'all' for no filter) \").strip().lower()\n",
-    "            if month in ['all', 'january', 'february', 'march', 'april', 'may', 'june']:\n",
-    "                break\n",
-    "            else:\n",
-    "                print(\"❌ Invalid input. Please enter a valid month name or 'all'.\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠️ Error: {e}. Please try again.\")\n",
-    "\n",
-    "    # Get user input for day\n",
-    "    while True:\n",
-    "        try:\n",
-    "            day = input(\"Which day - Monday, Tuesday, Wednesday, Thursday, Friday, Saturday, or Sunday? (Type 'all' for no filter) \").strip().lower()\n",
-    "            if day in ['all', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday']:\n",
-    "                break\n",
-    "            else:\n",
-    "                print(\"❌ Invalid input. Please enter a valid day name or 'all'.\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠️ Error: {e}. Please try again.\")\n",
-    "\n",
-    "    print('-' * 40)\n",
-    "    print(f\"✅ Your chosen City: {city.title()}, Month(s): {month.title() if month != 'all' else 'All'}, Day(s): {day.title() if day != 'all' else 'All'}\")\n",
-    "\n",
-    "    return city, month, day\n",
-    "\n",
     "def load_data(city, month, day):\n",
     "    \"\"\"\n",
     "    Loads data for the specified city and filters by month and day if applicable.\n",
